# pcmap

./: HOW_TO_GLA.ipynb  MDAnalysis_example.ipynb  MDAnalysis_pipeline_SASA.ipynb  PDBcoordinates_example.ipynb  README.md  Test_SASA.ipynb  paper.md  pyproject.toml  sasa.ndx  setup.py
CG/: SASA.xvg  gro.gro  temp.xvg
Single_conf/AA_ChainA/: MDtraj_resarea_0.191.txt  SASA.xvg  SASA_0.191.xvg  gro.gro  index.ndx  resarea_SASA.xvg  resarea_SASA_0.191.xvg
Single_conf/AA_Nterm/: SASA.xvg  resarea_SASA.xvg
Single_conf/CG_ChainA/: MDtraj_resarea_0.14.txt  MDtraj_resarea_0.191.npy  SASA.xvg  SASA_0.14.xvg  old_resarea_SASA.xvg
Single_conf/CG_Nterm/: SASA.xvg  resarea_SASA.xvg
data/: 1A2K_transformations_sample.json  all_monomers.lst  dummy_dimers.lst
data/CG/AA_ChainA/: MDtraj_resarea_0.191.npy  SASA_0.14.xvg  naccess.asa
data/CG/AA_Nterm/: gro.gro  index.ndx  resarea_SASA.xvg
data/CG/CG_ChainA/: MDtraj_resarea_0.14.npy  MDtraj_resarea_0.191.txt  resarea_SASA_0.14.xvg  resarea_SASA_0.191.xvg
data/CG/CG_Nterm/: SASA.xvg  gro.gro  index.ndx
data/Single_conf/: CG.tpr
data/Single_conf/AA_ChainA/: MDtraj_resarea_0.14.npy  MDtraj_resarea_0.14.txt  naccess.rsa  resarea_SASA_0.14.xvg
data/Single_conf/CG_ChainA/: gro.gro
data/sasa/CG/: index.ndx  resarea_SASA.xvg
notebooks/: HOW_TO_GLA.ipynb  PDBcoordinates_example.ipynb  Untitled.ipynb
paper_assets/: pcmap.bib
pcmap/: __init__.py  __main__.py  generators.py  utils.py
pcmap/sasa/: __init__.py  atom_map.py  dto.py  generator.py  run_many.py  threads.py
pcmap/sasa/generators/: mda_frames.py  pdb_lists.py
src/pcmap/: __init__.py  __main__.py  cli_validator.py  ctype.py  deserializer.py  generators.py  io.py  plugins.py  threads.py  utils.py
src/pcmap/sasa/: LSB_atom_map.py  __init__.py  cg_vdw_map_utils.py  generator.py
src/pcmap/sasa/generators/: mda_frames.py  pdb_lists.py
