[tool.poetry]
name = "pcmap"
version = "1.0.0"
description = "Computing contact map for protein structures"
authors = ["Guillaume Launay <guillaume.launay@ibcp.fr>"]
license = "GPL"
classifiers=[
              "Intended Audience :: Science/Research",
              "License :: OSI Approved :: MIT License",
              "Programming Language :: Python :: 3",
              "Topic :: Scientific/Engineering :: Bio-Informatics",
              "Topic :: Software Development :: Libraries :: Python Modules",
              "Development Status :: 5 - Production/Stable" 
       ]
homepage="https://github.com/MMSB-MOBI/pcmap"
keywords=['protein', 'structure', 'atomic contact', 'SASA']
#include=["data/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
docopt = "^0.6.2"
pypstruct = "^0.1.2"
numpy = "^1.19.0"
tqdm = "^4.64.1"
ipykernel = "^6.20.0"
ccmap = "^4.0.0"
MDAnalysis = "^2.3.0"
[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
setuptools = "^65.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
